[package]
name = "l3_extract"
version = "0.1.0"
edition = "2021"

[[example]]
name = "echo"

[[example]]
name = "close"

[[example]]
name = "udp_echo"

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
crossbeam-channel = "0.5.12"
derivative = "2.2.0"
event-listener = "5.3.0"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
futures-timer = "3.0.3"
futures-util = { version = "0.3.30", features = ["io"] }
rand = "0.8.5"
smoltcp = "0.11.0"
tracing = "0.1.40"

[dev-dependencies]
async-global-executor = "2.4.1"
async-io = "2.3.2"
async-net = "2.0.0"
netlink-sys = { version = "0.8", features = ["smol_socket"] }
rtnetlink = { version = "0.14", default-features = false, features = ["smol_socket"] }
rustix = "0.38.34"
tracing-subscriber = "0.3"
tun = "0.6.1"
